# llm-agent-platform

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
agents/: requirements.txt
agents/common/: platform_client.py
agents/curator_agent/: Dockerfile  main.py
agents/profile_agent/: Dockerfile  main.py
agents/utility_agent/: Dockerfile  main.py
docs/: architecture.md
grafana/provisioning/dashboards/: dashboard.yml  llm-platform.json
loadtests/: README.md  locustfile.py  requirements.txt  run_tests.sh
prometheus/: prometheus.yml
src/: main.py
src/api/: agents.py  completions.py  embeddings.py  metrics_endpoint.py  providers.py
src/auth/: middleware.py  token_store.py
src/balancer/: base.py  cascading.py  circuit_breaker.py  health_aware.py  latency_based.py  round_robin.py  router.py  weighted.py
src/core/: config.py
src/guardrails/: base.py  pipeline.py  prompt_injection.py  secret_leak.py
src/providers/: models.py  openrouter.py  registry.py  seed.py
src/registry/: agent_registry.py
src/schemas/: agent.py  openai.py
src/telemetry/: langfuse_tracer.py  logging.py  metrics.py  middleware.py  setup.py
tests/: test_auth.py  test_balancer.py  test_circuit_breaker.py  test_guardrails.py  test_latency_routing.py  test_registries.py
